--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 
 [dependencies]
 rssql-macro = { path = "rssql-macro" }
-tiberius = { version = "0.9.1"}
+tiberius = { version = "0.9.1", features = ["chrono"] }
 serde_json = "1.0.99"
 tokio = { version = "1.24.1", features = ["full"] }
 tokio-util = { version = "0.7.4", features = ["full"] }
 futures-lite = "1.12.0"
+serde = { version = "1.0", features = ["derive"] }
+anyhow = "1.0.71"
+async-trait = "0.1.68"
