--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+polars = ["rssql-macro/polars", "dep:polars"]
+
 [dependencies]
 rssql-macro = { path = "rssql-macro" }
-tiberius = { version = "0.9.1", features = ["chrono"] }
+tiberius = { path = "../tiberius", features = ["chrono"] }
 serde_json = "1.0.99"
 tokio = { version = "1.24.1", features = ["full"] }
 tokio-util = { version = "0.7.4", features = ["full"] }
@@ -15,3 +18,8 @@ futures-lite = "1.12.0"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0.71"
 async-trait = "0.1.68"
+
+[dependencies.polars]
+version = "0.31.0"
+optional = true
+#default-features = false
