--- a/rssql-macro/Cargo.toml
+++ b/rssql-macro/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+polars = []
+
 [dependencies]
 syn = { version = "2.0.22", features = ["full", "extra-traits"] }
 quote = "1.0.10"
