--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ polars = ["rssql-macro/polars", "dep:polars"]
 
 [dependencies]
 rssql-macro = { path = "rssql-macro" }
-tiberius = { path = "../tiberius", features = ["chrono"] }
+tiberius = { version = "0.12.2", features = ["chrono"] }
 serde_json = "1.0.99"
 tokio = { version = "1.24.1", features = ["full"] }
 tokio-util = { version = "0.7.4", features = ["full"] }
