--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ async-trait = "0.1.68"
 version = "0.31.0"
 optional = true
 #default-features = false
+
+[dev-dependencies]
+deadpool-tiberius = "0.1.3"
