--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 polars = ["rssql-macro/polars", "dep:polars"]
 
 [dependencies]
-rssql-macro = { path = "rssql-macro" }
+rssql-macro = { version = "0.1.0", path = "rssql-macro" }
 tiberius = { version = "0.12.2", features = ["chrono"] }
 serde_json = "1.0.99"
 tokio = { version = "1.24.1", features = ["full"] }
