--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,4 @@ features = ["serde"]
 [dev-dependencies]
 deadpool-tiberius = "0.1.3"
 chrono = "0.4.26"
+tiberius = { version = "0.12.2", features=["chrono"]}
