--- a/ssql-macro/Cargo.toml
+++ b/ssql-macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssql-macro"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 authors = ["Geo W"]
 description = "Macro for ssql -- an sync ms sql server basic orm"
@@ -19,5 +19,5 @@ quote = "1.0.10"
 proc-macro2 = "1.0.56"
 
 [lib]
-name = "rssql_macro"
+name = "ssql_macro"
 proc-macro = true
