--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ chrono = ["tiberius/chrono", "dep:chrono"]
 ssql-macro = { version = "0.1.3", path = "ssql-macro" }
 tiberius = { version = "0.12.2"}
 serde_json = "1.0.99"
-tokio = { version = "1.24.1", features = ["full"] }
-tokio-util = { version = "0.7.4", features = ["full"] }
+tokio = { version = "1.24.1", features = ["rt", "net"] }
+tokio-util = { version = "0.7.4", features = ["compat"] }
 futures-lite = "1.12.0"
 serde = { version = "1.0", features = ["derive"] }
 async-trait = "0.1.68"
@@ -38,3 +38,4 @@ features = ["serde"]
 deadpool-tiberius = "0.1.3"
 chrono = "0.4.31"
 tiberius = { version = "0.12.2", features=["chrono"]}
+tokio = { version = "1.24.1", features = ["rt", "net", "macros"] }
