--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,6 @@ features = ["serde"]
 
 [dev-dependencies]
 deadpool-tiberius = "0.1.3"
-chrono = "0.4.31"
+chrono = { version = "0.4.31", features = ['serde'] }
 tiberius = { version = "0.12.2", features=["chrono"]}
 tokio = { version = "1.24.1", features = ["rt", "net", "macros"] }
