--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,16 @@ readme = "README.md"
 [features]
 polars = ["ssql-macro/polars", "dep:polars"]
 chrono = ["tiberius/chrono", "dep:chrono"]
+serde = ["dep:serde", "dep:serde_json", "chrono/serde", "ssql-macro/serde" ]
 
 [dependencies]
 ssql-macro = { version = "0.1.4", path = "ssql-macro" }
 tiberius = { version = "0.12.2"}
-serde_json = "1.0.99"
+#serde_json = "1.0.99"
 tokio = { version = "1.24.1", features = ["rt", "net"] }
 tokio-util = { version = "0.7.4", features = ["compat"] }
 futures-lite = "1.12.0"
-serde = { version = "1.0", features = ["derive"] }
+#serde = { version = "1.0", features = ["derive"] }
 async-trait = "0.1.68"
 
 [dependencies.polars]
@@ -34,8 +35,17 @@ version = "0.4.31"
 optional = true
 features = ["serde"]
 
+[dependencies.serde]
+version = "1.0"
+optional = true
+
+[dependencies.serde_json]
+version = "1.0"
+optional = true
+
 [dev-dependencies]
 deadpool-tiberius = "0.1.3"
 chrono = { version = "0.4.31", features = ['serde'] }
 tiberius = { version = "0.12.2", features=["chrono"]}
 tokio = { version = "1.24.1", features = ["rt", "net", "macros"] }
+serde = {version = "1.0", features = ["derive"]}
