--- a/ssql-macro/Cargo.toml
+++ b/ssql-macro/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 
 [features]
 polars = []
+serde = []
 
 [dependencies]
 syn = { version = "2.0.22", features = ["full", "extra-traits"] }
