--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ tokio = { version = "1.24.1", features = ["rt", "net"] }
 tokio-util = { version = "0.7.4", features = ["compat"] }
 futures-lite = "1.12.0"
 #serde = { version = "1.0", features = ["derive"] }
-async-trait = "0.1.68"
+#async-trait = "0.1.68"
 
 [dependencies.polars]
 version = "0.33.2"
