--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ keywords = ["async", "database", "sqlserver", "orm", "tiberius"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/Geo-W/ssql"
 readme = "README.md"
+exclude = ["/.idea/"]
 
 
 [features]
